--- a/Customer Churn Analysis.ipynb
+++ b/Customer Churn Analysis.ipynb
@@ -10,9 +10,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt    \n",
-    "import seaborn as sns \n",
-    "import streamlit as st"
-   ]
+    "import seaborn as sns \n",   ]
   },
   {
    "cell_type": "code",
