--- a/Customer Churn Analysis.ipynb
+++ b/Customer Churn Analysis.ipynb
@@ -227,7 +227,7 @@
     }
    ],
    "source": [
-    "telco_data = pd.read_csv(r'C:\\Users\\ASUS\\Downloads\\WA_Fn-UseC_-Telco-Customer-Churn.csv')\n",
+    "telco_data = pd.read_csv('WA_Fn-UseC_-Telco-Customer-Churn.csv')",
     "telco_data.head()"
    ]
   },
